## $Id: Makefile.am,v 1.10 2006-05-24 12:33:22 adam Exp $

commondir=$(datadir)/doc/@PACKAGE@/common

common_DATA = style1.css id.png

SUPPORTFILES = \
 xml.dcl \
 common.ent \
 id.eps \
 ref2dbinc.xsl \
 html.dsl.in \
 html.xsl.in \
 tkl.xsl.in \
 print.dsl.in \
 man.xsl.in \
 docbook2man.sh docbook-to-man.sh

EXTRA_DIST = $(SUPPORTFILES) $(common_DATA) README

