## $Id: Makefile.am,v 1.12 2006-06-02 10:50:28 adam Exp $

commondir=$(datadir)/doc/@PACKAGE@/common

common_DATA = style1.css id.png

SUPPORTFILES = \
 xml.dcl \
 common.ent \
 id.eps \
 ref2dbinc.xsl \
 html.dsl.in \
 html.xsl.in \
 tkl.xsl.in \
 print.dsl.in \
 man.xsl.in \
 id.htmlhelp.xsl \
 id.man.xsl \
 id.tkl.xsl 

EXTRA_DIST = $(SUPPORTFILES) $(common_DATA) README

