## $Id: Makefile.am,v 1.13 2006-06-02 11:04:17 adam Exp $

commondir=$(datadir)/doc/@PACKAGE@/common

common_DATA = style1.css id.png

SUPPORTFILES = \
 xml.dcl \
 common.ent \
 id.eps \
 ref2dbinc.xsl \
 print.dsl.in \
 id.htmlhelp.xsl \
 id.man.xsl \
 id.tkl.xsl 

EXTRA_DIST = $(SUPPORTFILES) $(common_DATA) README

